@@ -1,3 +1,8 @@
+2020-11-27  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/tools/javadoc/StandardDoclet.java:
+	Interim check-in: Initial writing.
+
 2020-11-24  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ball/tools/javadoc/AbstractTaglet.java:
